# VerbenForm

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DE.md  README_RU.md  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
core/: settings.py  urls.py
docker/: entrypoint.sh
goaccess/: beispiel.conf  goaccess.conf  update_geoip.sh
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
nginx/: nginx.conf  nginx_old.conf
src/api/: mixins.py  serializers.py  tests.py  urls.py  views.py
src/common/: choices.py
src/personal_forms/: admin.py  apps.py  domain.py  models.py  signals.py  urls.py
src/users/: admin.py  middleware.py  models.py  permissions.py  services.py
src/web/: forms.py  urls.py  views.py
static/css/: style.css
static/favicon/: site.webmanifest
static/js/: verb-selection.js
templates/: 404.html  base.html  landing.html  markdown.html
templates/admin/: set_level_action.html
templates/auth/: login.html  profile.html  pwd_change.html  register.html
templates/includes/: _footer.html  _head.html  _language_switcher.html  _navbar.html  _password_toggle.html  _scripts.html  _user_menu.html
templates/legal/: impressum.html  privacy.html
templates/personal_forms/: course_detail.html  course_list.html  dashboard.html  unit_stats.html
templates/profile/: settings.html
templates/teacher/: create_invitation.html  dashboard_main.html  student_course_detail.html  student_course_list.html  student_detail.html  students.html
templates/training/: session.html
(+85 files in other folders)
